--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,30 @@ body {
   background-color: lightslategray;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: darkslategrey;
+  color: white;
+  height: 50px;
+}
+
+.title {
+  color: lightgray;
+  font-weight: 20px;
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+.episodes-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
 .episode {
   background-color: darkslategrey;
   margin: auto;
@@ -17,6 +41,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 300px;
+  height: 400px;
   flex: 0 0 auto;
   font-size: 12px;
   color: white;
@@ -29,4 +54,8 @@ body {
   margin-bottom: 15px;
   width: 100%;
   border-radius: 10px;
+}
+
+.episode--name {
+  padding-bottom: 20px;
 }
