--- a/src/styles.css
+++ b/src/styles.css
@@ -8,13 +8,20 @@ body {
   background-color: lightslategray;
 }
 
-nav {
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: darkslategrey;
   color: white;
-  height: 50px;
+  height: 60px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.searchbar {
+  display: flex;
+  gap: 10px;
 }
 
 .title {
@@ -30,6 +37,7 @@ nav {
   justify-content: center;
   flex-wrap: wrap;
   gap: 10px;
+  margin-top: 30px;
 }
 
 .episode {
@@ -41,7 +49,7 @@ nav {
   display: flex;
   flex-direction: column;
   width: 300px;
-  height: 400px;
+  height: 450px;
   flex: 0 0 auto;
   font-size: 12px;
   color: white;
@@ -58,4 +66,13 @@ nav {
 
 .episode--name {
   padding-bottom: 20px;
+}
+
+.footer {
+  margin: auto;
+  background-color: darkslategrey;
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  padding: 20px;
 }
