--- a/src/styles.css
+++ b/src/styles.css
@@ -49,13 +49,18 @@ body {
   display: flex;
   flex-direction: column;
   width: 300px;
-  height: 450px;
+  height: 400px;
   flex: 0 0 auto;
   font-size: 12px;
   color: white;
   align-items: center;
   text-align: center;
   letter-spacing: 0.3px;
+}
+
+.episode--season {
+  display: flex;
+  justify-content: space-between;
 }
 
 .episode--image {
