--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,32 @@ body {
   margin-top: 30px;
 }
 
+.shows-list-view {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 30px;
+}
+
+.tv-show-list-item {
+  background-color: darkslategrey;
+  margin: auto;
+  margin-bottom: 20px;
+  border-radius: 9px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 400px;
+  flex: 0 0 auto;
+  font-size: 12px;
+  color: white;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.3px;
+}
+
 .episode {
   background-color: darkslategrey;
   margin: auto;
