--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,42 @@ body {
   padding-bottom: 20px;
 }
 
+.tvshow-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 30px;
+}
+
+.tvshow {
+  background-color: #802a91;
+  margin: auto;
+  margin-bottom: 20px;
+  border-radius: 9px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 400px;
+  flex: 0 0 auto;
+  font-size: 12px;
+  color: white;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.3px;
+}
+
+.tvshow--image {
+  margin-bottom: 15px;
+  width: 50%;
+  border-radius: 10px;
+}
+
+.tvshow--name {
+  padding-bottom: 20px;
+}
+
 .footer {
   margin: auto;
   background-color: darkslategrey;
